Update backend services and Google API integrations
Refactor backend services, update Google API client configurations, and improve external service integrations.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 090e6697-f9bf-4698-83c3-5aa737e37872
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: 20939384-8974-47a7-aa1e-c189ce9d3ece
Replit-Helium-Checkpoint-Created: true